# cmd-chat

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.MD  SECURITY.md  cmd_chat.py  cspell.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
cmd_chat/: __init__.py
cmd_chat/client/: client.py  config.py
cmd_chat/client/core/: crypto.py  default_renderer.py  rich_renderer.py
cmd_chat/client/core/abs/: abs_crypto.py  abs_renderer.py
cmd_chat/server/: models.py  server.py  services.py
tests/unit/: test_models.py  test_services.py
